1.验证码接口 2.邮箱验证码接口(可升级) 3.注册账号接口 4.登录接口(未完成)